tests/negative/resource_move_non_place.ora
resource TokenUnit = u256;

contract ResourceMoveNonPlace {
    storage var balances: map<address, Resource<TokenUnit>>;

    pub fn bad(to: address, amount: TokenUnit) {
        @move(amount, balances[to], amount);
    }
}
